--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>General Link</title>
     <link rel="stylesheet" href="./css/css.css" />
     <link rel="shortcut icon" href="./images/favicon.ico" />
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Rubik+Gemstones&display=swap" rel="stylesheet">
+    <link rel="preconnect" 
+    href="https://fonts.googleapis.com">
+    <link rel="preconnect" 
+    href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Rubik+Gemstones&display=swap" rel="stylesheet">
 </head>
 <body >
 <div class="hero__div">
