--- a/RS.html
+++ b/RS.html
@@ -8,6 +8,11 @@
     <title>RS</title>
     <link rel="stylesheet" href="./css/css.css" />
     <link rel="shortcut icon" href="./images/favicon.ico" />
+    <link rel="preconnect" 
+    href="https://fonts.googleapis.com">
+    <link rel="preconnect" 
+    href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Rubik+Gemstones&display=swap" rel="stylesheet">
 </head>
 <body >
 <div class="div__mally">
