--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <img src="./images/ОБЛОГА3000на3.jpg" alt="Обложка альбому" height="300" width="300">
 
     <form 
-    action="/RS.html"
+    action="./"
     target="_self"
     >
     <button class="hero__button-first" type="submit">Прослухати</button>  
@@ -31,7 +31,7 @@
       <img src="./images/TEMYCH_MALLY_Pill.jpg" alt="Обложка альбому" height="300" width="300">
 
       <form 
-      action="./MALLY.html"
+      action="./mally.html"
       target="_self"
       >
       <button class="hero__button-second" type="submit">Прослухати</button>  
