--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <img src="./images/ОБЛОГА3000на3.jpg" alt="Обложка альбому" height="300" width="300">
 
     <form 
-    action="./"
+    action="./razbserdce.html"
     target="_self"
     >
     <button class="hero__button-first" type="submit">Прослухати</button>  
