--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body >
 <div class="hero__div">
-  <div class="hero__divv">
+  <div class="hero__album">
     <img src="./images/ОБЛОГА3000на3.jpg" alt="Обложка альбому" height="300" width="300">
 
     <form 
