--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <img src="./images/ОБЛОГА3000на3.jpg" alt="Обложка альбому" height="300" width="300">
 
     <form 
-    action="./razbserdce.html"
+    action="./rs.html"
     target="_self"
     >
     <button class="hero__button-first" type="submit">Прослухати</button>  
       </form>
     </div>
 
-<div class="hero__divv">
+<div class="hero__album">
       <img src="./images/TEMYCH_MALLY_Pill.jpg" alt="Обложка альбому" height="300" width="300">
 
       <form 
